test/files/neg/sammy_disabled.check
sammy_disabled.scala:5: error: missing parameter type
class C { val f: F = x => "a" }
                     ^
one error found
